@@ -117,8 +117,6 @@
 			<scope>test</scope>
 		</dependency>
 
-
-
         <dependency>
             <groupId>GR2117</groupId>
             <artifactId>modules-ui</artifactId>
@@ -144,7 +142,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>
-                    @{jaCoCoArgLine} --add-opens exciter.ui/ui=ALL-UNNAMED
                      --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
 </argLine>
                 </configuration>
@@ -161,29 +158,6 @@
                     <mainClass>exciter.ui/ui.App</mainClass>
                 </configuration>
             </plugin>
-
-            <plugin>
-                <groupId>org.jacoco</groupId>
-                <artifactId>jacoco-maven-plugin</artifactId>
-                <configuration>
-                    <propertyName>jaCoCoArgLine</propertyName>
-                </configuration>
-                <version>0.8.7</version>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>report</id>
-                        <phase>test</phase>
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
+       </plugins>
     </build>
 </project>
